feat: 스플래시 화면 적용

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <style name="Theme.GoalMate" parent="android:Theme.Material.Light.NoActionBar" />
-    
-    <style name="Theme.SplashScreen.GoalMate" parent="Theme.SplashScreen">
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/primary_color</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/icon_logo</item>
         <item name="postSplashScreenTheme">@style/Theme.GoalMate</item>
