--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.GoalMate" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.GoalMate" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="android:windowSplashScreenBackground">@color/primary_color</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/icon_logo</item>
-        <item name="android:windowSplashScreenAnimationDuration">2000</item>
+        <item name="postSplashScreenTheme">@style/Theme.GoalMate</item>
     </style>
 </resources>
