--- a/app/src/main/res/drawable/icon_back.xml
+++ b/app/src/main/res/drawable/icon_back.xml
@@ -1,10 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="10dp"
+    android:height="19dp"
+    android:viewportWidth="10"
+    android:viewportHeight="19">
   <path
-      android:pathData="M9.343,12L16.414,19.071L15,20.485L7.222,12.707C7.035,12.519 6.93,12.265 6.93,12C6.93,11.734 7.035,11.48 7.222,11.293L15,3.515L16.414,4.929L9.343,12Z"
-      android:fillColor="#000000"
-      android:fillType="evenOdd"/>
+      android:pathData="M9,1.245L1,9.245L9,17.245"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="#212121"
+      android:strokeLineCap="round"/>
 </vector>
