--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -6,6 +6,7 @@
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="android:windowSplashScreenBackground">@color/primary_color</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/icon_logo</item>
+        <item name="android:windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.GoalMate</item>
     </style>
 </resources>
