--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,6 @@
         <item name="windowSplashScreenBackground">@color/primary_color</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/icon_logo</item>
         <item name="postSplashScreenTheme">@style/Theme.GoalMate</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
     </style>
 </resources>
